[metadata]
name = PyBrOpt
version = 1.0.0
author = Robert Shrote
author_email = shrotero@msu.edu
description = Python package for numerical breeding optimizations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rzshrote/PyBrOpt
project_urls =
    Bug Tracker = https://github.com/rzshrote/PyBrOpt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix

[options]
package_dir =
    = pybropt
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pybropt
