[metadata]
name = PyBrOpS
version = 1.0.0
author = Robert Shrote
author_email = shrotero@msu.edu
description = Python package for numerical breeding optimizations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rzshrote/PyBrOpS
project_urls =
    Bug Tracker = https://github.com/rzshrote/PyBrOpS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix

[options]
package_dir =
    = pybrops
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pybrops
